﻿GNomEx Release Notes

4.9.2
------------------------
- Fix wording for core lib prep instructions label on Illumina Submit request (barcoded samples)

4.9.1 (Aug 24, 2010)
------------------------
- When gnomex user is submitting a work auth form, show only labs he belong to in dropdown. 
- Provide way to launch gnomex to automatically bring up Work Auth window. 
- For advanced search, show only slides (in dropdown) that are used for public experiments when user is guest or univ-only user
- Fix bug that was causing error on save after adding new Billing account to a lab.
- Add info under 'Trouble downloading' to recommend users download files individually when over 2 GB.  Also, in prompt recommend indiv. file download when exceed 2 GB.
- Allow more than one production server in property production_server when gnomex runs on more than one production server at the same time 


4.9 (Aug 23, 2010)
------------------------
- Added ability for univ users (with or without GNomEx account) to submit work authorization forms in gnomex
- Added ability for admins to approve pending billing accounts (from work auth forms)
- Fix bug that was causing delete request to fail because of fk violation to seq lib treatments.
- Fix bug introduced in 4.8.7 that was causing empty work list for sequencing run and sequencing data pipeline.
- Scrub out slide product, slide design list for guest users and non-gnomex university users
- Scrub out all custom slides not belonging to user's lab
- Don't show 'no slides' message before user has selected microarray app radio button on Microarray Submit Request window.
- Show 'changes have not been saved' message when admin clicks on 'Approved' checkbox for pending billing account of Lab.

4.8.7.1 (Aug 17, 2010)
-------------------------
- Fixed bug introduced in 4.8.7 that was causing billing account dropdown to be blank on Submit Request window for non-admin users.